force-app/async/main/default/objects/AsyncTask__c/AsyncTask__c.object-meta.xml
<CustomObject>
    <description>Represents a task that will be run asynchronously by the system.</description>
    <label>Async Task</label>
    <nameField>
        <label>Async Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Async Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>