force-app/async/main/default/objects/AsyncTask__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the task</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>