force-app/async/main/default/objects/AsyncTask__c/fields/ExecutionCount__c.field-meta.xml
<CustomField>
    <fullName>ExecutionCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Execution Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>