force-app/async/main/default/objects/AsyncTask__c/fields/HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>HandlerClassName__c</fullName>
    <description>Name of the handler class for this task</description>
    <label>Handler Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>