force-app/async/main/default/objects/AsyncTask__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the task has been completed.</description>
    <inlineHelpText>A job is considered completed when one of these criteria is met:
 - The task has been run successfully
 - The task&#39;s execution count is greater than the allowed number of retries.</inlineHelpText>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>