force-app/async/main/default/objects/AsyncTask__c/fields/IsFailure__c.field-meta.xml
<CustomField>
    <fullName>IsFailure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the job last job execution has failed</description>
    <label>Failure</label>
    <type>Checkbox</type>
</CustomField>