force-app/async/main/default/objects/AsyncTask__c/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checke dis the last execution of the task was successful</description>
    <label>Success</label>
    <type>Checkbox</type>
</CustomField>