force-app/async/main/default/objects/AsyncTask__c/fields/LastErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>LastErrorMessage__c</fullName>
    <label>Last Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>