force-app/async/main/default/objects/AsyncTask__c/fields/LastResult__c.field-meta.xml
<CustomField>
    <fullName>LastResult__c</fullName>
    <description>Result from the last execution of the task, serialized in JSON format.</description>
    <label>Last Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>