force-app/async/main/default/objects/AsyncTask__c/fields/LastRunDuration__c.field-meta.xml
<CustomField>
    <fullName>LastRunDuration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Duration</label>
    <description>Duration of the latest execution in milliseconds.</description>
    <inlineHelpText>Duration of the latest execution in milliseconds.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>