force-app/async/main/default/objects/AsyncTask__c/fields/LastRunEndTime__c.field-meta.xml
<CustomField>
    <fullName>LastRunEndTime__c</fullName>
    <description>TimeStamp of the end of the last execution of the Async Task</description>
    <label>Last Run End Time</label>
    <type>DateTime</type>
</CustomField>