force-app/async/main/default/objects/AsyncTask__c/fields/LastRunStartTime__c.field-meta.xml
<CustomField>
    <fullName>LastRunStartTime__c</fullName>
    <description>TimeStamp of the beginning of the last execution of the Async Task</description>
    <label>Last Run Start Time</label>
    <type>DateTime</type>
</CustomField>