force-app/async/main/default/objects/AsyncTask__c/fields/LastStackTrace__c.field-meta.xml
<CustomField>
    <fullName>LastStackTrace__c</fullName>
    <label>Last StackTrace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>