force-app/async/main/default/objects/AsyncTask__c/fields/LastSuccessMessage__c.field-meta.xml
<CustomField>
    <fullName>LastSuccessMessage__c</fullName>
    <label>Last Success Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>