force-app/async/main/default/objects/AsyncTask__c/fields/OnHold__c.field-meta.xml
<CustomField>
    <fullName>OnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this task execution will be skipped</description>
    <label>On hold</label>
    <type>Checkbox</type>
</CustomField>