force-app/async/main/default/objects/AsyncTask__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <inlineHelpText>Higher value -> higher priority</inlineHelpText>
</CustomField>