force-app/async/main/default/objects/AsyncTask__c/fields/SkipUntil__c.field-meta.xml
<CustomField>
    <fullName>SkipUntil__c</fullName>
    <description>The execution of this task will be skipped until this moment</description>
    <label>Skip Until</label>
    <type>DateTime</type>
</CustomField>