force-app/async/main/default/objects/AsyncTask__c/fields/TimeInQueue__c.field-meta.xml
<CustomField>
    <fullName>TimeInQueue__c</fullName>
    <description>Time the task has been waiting in the queue in seconds.</description>
    <inlineHelpText>Time the task has been waiting in the queue in seconds.</inlineHelpText>
    <formula>IF ( ISBLANK(LastRunStartTime__c) &amp;&amp; ISBLANK(LastRunEndTime__c), (NOW() -  CreatedDate)*24*60*60,
   IF(  IsCompleted__c == false, (NOW() - LastRunEndTime__c)*24*60*60, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Time in queue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>