force-app/async/main/default/objects/AsyncTask__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LastRunStartTime__c</columns>
    <columns>Priority__c</columns>
    <columns>IsCompleted__c</columns>
    <columns>IsFailure__c</columns>
    <columns>IsSuccess__c</columns>
    <columns>OnHold__c</columns>
    <columns>ExecutionCount__c</columns>
    <columns>Description__c</columns>
    <columns>HandlerClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>